integrates/deploy/ephemeral/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-__DEPLOYMENT_NAME__
  namespace: ephemeral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrates-__DEPLOYMENT_NAME__
  template:
    metadata:
      labels:
        app: integrates-__DEPLOYMENT_NAME__
    spec:
      nodeSelector:
        worker_group: ephemeral
      containers:
        - name: integrates
          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          command: [bash]
          args:
            - build.sh
            - integrates_serve_components
            - development
            - http/development/back.app.app:APP/back.settings.uvicorn.IntegratesWorker/3/0.0.0.0/8001/*
          resources:
            requests:
              cpu: 300m
              memory: 1000Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - bash
                - build.sh
                - integrates_probes_readiness
                - integrates-dev
                - http://localhost:8001/
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
          livenessProbe:
            exec:
              command:
                - bash
                - build.sh
                - integrates_probes_liveness
                - integrates-dev
                - http://localhost:8001/
                - https://__CI_COMMIT_REF_NAME__.integrates.fluidattacks.com/
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
        - name: dynamo
          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          command: [bash]
          args:
            - build.sh
            - integrates_serve_components
            - development
            - dynamo
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 2000m
              memory: 1000Mi
        - name: redis
          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          command: [bash]
          args:
            - build.sh
            - integrates_serve_components
            - development
            - redis
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 2000m
              memory: 1000Mi
        - name: minio
          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          command: [bash]
          args:
            - build.sh
            - integrates_serve_components
            - development
            - minio
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 2000m
              memory: 1000Mi
