integrates/deploy/ephemeral/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates2-__DEPLOYMENT_NAME__
  namespace: ephemeral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrates2-__DEPLOYMENT_NAME__
  template:
    metadata:
      labels:
        app: integrates2-__DEPLOYMENT_NAME__
    spec:
      nodeSelector:
        worker_group: large
      containers:
        - name: integrates2
          image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME___new
          imagePullPolicy: Always
          command: ["bash"]
          args: ["build.sh", "integrates2_serve_ephemeral"]
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 8000
          readinessProbe:
            exec:
              command: [./build.sh, integrates2_probes_ephemeral_readiness]
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
          livenessProbe:
            exec:
              command: [./build.sh, integrates2_probes_ephemeral_liveness]
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
