integrates/deploy/ephemeral/deploy-integrates.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-__DEPLOYMENT_NAME__
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: integrates-__DEPLOYMENT_NAME__
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: review-__DEPLOYMENT_NAME__
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: integrates-__DEPLOYMENT_NAME__
    spec:
      containers:
      - name: integrates
        image: registry.gitlab.com/fluidattacks/product/app:__DEPLOYMENT_NAME__
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 500m
            memory: 2Gi
        ports:
        - containerPort: 443
        readinessProbe:
          exec:
            command:
              - sh
              - -ce
              - "curl -sS http://localhost | grep 'FluidIntegrates'"
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 3
          failureThreshold: 10
      imagePullSecrets:
      - name: gitlab-reg
