integrates/deploy/ephemeral/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: integrates2-__DEPLOYMENT_NAME__
  namespace: ephemeral
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: integrates2-__DEPLOYMENT_NAME__
