integrates/deploy/ephemeral/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: integrates-__DEPLOYMENT_NAME__
  namespace: ephemeral
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: management:product=integrates,management:type=development
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=180
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=false
    alb.ingress.kubernetes.io/healthcheck-path: /new/
    alb.ingress.kubernetes.io/success-codes: 200,302
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '6'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: __EPHEMERAL_CERTIFICATE_ARN__
    alb.ingress.kubernetes.io/wafv2-acl-arn: __FIREWALL_ACL_ARN__
spec:
  rules:
    - host: __DEPLOYMENT_NAME__.integrates.fluidattacks.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /confirm_access
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /error401
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /error500
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /invalid_invitation
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /logout
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /new/*
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /static/*
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 81
          - path: /*
            backend:
              serviceName: integrates-__DEPLOYMENT_NAME__
              servicePort: 80
